# simple-tui

./: README.md  pyproject.toml  simple_tui.css
simple_tui/: app.py
