[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "simple-tui"
version = "0.1.1"
description = "A minimal Textual TUI demo"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Charlie Sands" }]
dependencies = ["textual>=0.58.0"]

[project.scripts]
simpletui = "simple_tui.app:main"

# ---- Hatch build config (single, deduped) ----
[tool.hatch.build]
include = [
  "simple_tui/**/*.py",
  "simple_tui/**/*.css",
  "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["simple_tui"]

